--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Compose twig templates from multiple child templates",
     "type": "library",
     "require": {
-        "php": "5.6 || ^7.0",
+        "php": "^5.6 || ^7.0",
         "twig/twig": "1.* || 2.*"
     },
     "require-dev": {
